--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
 <body>
   <h1>Ciao 👋 Benvenuti nel mio sito!</h1>
   <p>Questa è una pagina creata direttamente su GitHub.</p>
-  <img src="images/foto.jpg" alt="La mia immagine">
+  <img src="images/Screenshot 2025-10-15 alle 23.15.40.png" alt="La mia immagine">
 </body>
 </html>
